--- a/package.json
+++ b/package.json
@@ -40,11 +40,40 @@
     ]
   },
   "devDependencies": {
+    "commitlint": "11.0.0",
     "eslint-config-prettier": "7.2.0",
+    "husky": "4.3.8",
     "prettier": "2.2.1",
     "stylelint": "13.9.0",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
     "typescript": "4.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "post-checkout": "./scripts/post-checkout.sh $HUSKY_GIT_PARAMS",
+      "post-merge": "npm ci",
+      "post-rebase": "npm i"
+    }
+  },
+  "lint-staged": {
+    "./**/*.{js,jsx,ts,tsx}": [
+      "eslint --max-warnings=0 --fix --no-ignore",
+      "git add",
+      "prettier --write",
+      "git add"
+    ],
+    "./**/*.{css,scss,sass}": [
+      "stylelint --fix",
+      "git add",
+      "prettier --write",
+      "git add"
+    ],
+    "./**/*.{json,md,html}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
