--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "commitlint": "11.0.0",
     "eslint-config-prettier": "7.2.0",
     "husky": "4.3.8",
+    "lint-staged": "10.5.4",
     "prettier": "2.2.1",
     "stylelint": "13.9.0",
     "stylelint-config-prettier": "8.0.2",
